--- a/local.bib
+++ b/local.bib
@@ -5,3 +5,11 @@
    month = apr,
   handle = {DMTN-106},
 }
+
+@DocuShare{DMTN-104,
+  author = {Gabriele Comoretto},
+   title = "{Data Management Detailed Product Tree}",
+    year = 2019,
+   month = jan,
+  handle = {DMTN-104},
+}
