--- a/process.tex
+++ b/process.tex
@@ -1,5 +1,10 @@
 \section{Process} \label{sec:process}
 
+
+This high level process has already been documented in \citeds{LDM-294}, section 3.6. 
+In order to avoid duplications, this process should be maintained only in one document.
+
+
 \subsection{Release Process Definition}
 
 The release process will be as follows:
