--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -39,8 +39,9 @@ Technical implementation details for release management are covered in \citeds{D
 % Fields: VERSION, DATE, DESCRIPTION, OWNER NAME.
 % See LPM-51 for version number policy.`
 \setDocChangeRecord{%
+  \addtohist{}{2019-05-09}{Clarifications}{G.~Comoretto}
   \addtohist{}{2019-05-07}{Updated community requirements, abstractt}{L.~Guy}
-  \addtohist{}{2019-04-22}{Definitions and Requirements}{G.~ Comoretto}
+  \addtohist{}{2019-04-22}{Definitions and Requirements}{G.~Comoretto}
   \addtohist{}{2018-12-03}{First draft}{L.~Guy, G.~Comoretto}
 }
 
