Added other contributors

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -17,7 +17,7 @@
 % \setDocSubtitle{A subtitle}
 
 \author{%
-Leanne Guy, Gabriele Comoretto
+L. Guy, G. Comoretto, W. O'Mullane, K.-T. Lim
 }	
 
 \setDocRef{LDM-672}
