Added NCSA comments

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -28,7 +28,7 @@ Leanne Guy, Gabriele Comoretto
 \setDocCurator{Leanne Guy}
 
 \setDocAbstract{%
-This document outlines the \gls{LSST} \gls{DM} policy for managing \gls{DM} software product releases. 
+This document outlines the \gls{LSST} \gls{DM} policy for managing software product releases. 
 The policy takes into account requirements from users of \gls{DM} software products, both from within the \gls{LSST} project, and from the LSST science community. 
 Technical implementation details for release management are covered in \citeds{DMTN-106}. 
 }
