--- a/requirements.tex
+++ b/requirements.tex
@@ -24,10 +24,17 @@ In such cases, a mechanism for deprecation should be adopted to allow the user c
 The \gls{DM} Science Team will liaise with the \gls{LSST} science community to understand their needs concerning \gls{DM} software product releases. 
 Requests for new functionality or back-ported bug fixes to include in forthcoming \gls{DM} software product releases will be communicated to \gls{DM} via a \gls{RFC}, coordinated either by the DM-SST liaison to the science collaboration or a nominated person within the science collaboration who will coordinate requests and raise an \gls{RFC}. 
 
+
 \subsection{Release Requirements for Data Processing in Operations} \label{sec:procreqs}
 
-The Science Operations Department will be in charge of  data processing in operations. 
-Software for the various pipelines will be hosted at \gls{NCSA},IN2P3 and in Chile.
+%The Science Operations Department will be in charge of  data processing in operations. 
+%Software for the various pipelines will be hosted at \gls{NCSA},IN2P3 and in Chile.
+
+The \gls{LDF} will be responsible for generating the needed data products during commissioning and operations. 
+The \gls{LDF} requires officially released software to be used in production for the various operational activities.
+Software releases shall be properly documented with a software release note as per definition in \ref{sec:defrelease} and tested before making them available for operations.
+Software releases will be run in production at National Center for Supercomputing Applications (\gls{NCSA}), CC-IN2P3 and in Chile. 
+Additional processing centers may be added to the list.
 
 Release frequencies will depend on the processing type:
 \begin{itemize}
@@ -41,6 +48,7 @@ Release frequencies will depend on the processing type:
 
 Patch releases need to be provided with a frequency that depends on the type of processing
 and on the urgency of the problems to be fixed.
+
 
 \subsection{Release Requirements for \gls{LSST} Subsystems in Operations.} \label{sec:otherreqs}
 
