--- a/requirements.tex
+++ b/requirements.tex
@@ -3,7 +3,12 @@
 There are several different stakeholders of the \gls{LSST} \gls{DM} software products, each of whom may have different requirements for releases.
 In this section we give an overview of their respective requirements on  \gls{DM} software product releases.
 
+It is important to identify the correct release policy during contraction phase, in order to have it consolidated when operations starts.
+
+Once in operations, some of the LSST subsystems mentioned here may not be relevant anymore, but the policy defined here shall still be applicable, since many of the stakeholders will still expect software releases to be managed properly. 
+
 %To be kept in mind that the content of a release, must be well understood and documented in the corresponding release note.
+
 
 \subsection{Release Requirements for the \gls{LSST} Science Community} \label{sec:comreqs}
 
