Adde MButler and MGelman as coauthors

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -17,7 +17,7 @@
 % \setDocSubtitle{A subtitle}
 
 \author{%
-L. Guy, G. Comoretto, W. O'Mullane, K.-T. Lim
+L. Guy, G. Comoretto, W. O'Mullane, K.-T. Lim, M. Butler, M. Gelman
 }	
 
 \setDocRef{LDM-672}
