--- a/process.tex
+++ b/process.tex
@@ -1,7 +1,7 @@
 \section{Process} \label{sec:process}
 
 
-This high level process has already been documented in \citeds{LDM-294}, section 3.6. 
+The high-level Release Management plan for \gls{DM} is documented in \citeds{LDM-294}, section 3.6. 
 In order to avoid duplications, this process should be maintained only in one document.
 
 
