--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -11,13 +11,13 @@
 
 % To add a short-form title:
 % \title[Short title]{Title}
-\title{LSST Software Release Management Policy}
+\title{LSST Software \gls{Release} Management Policy}
 
 % Optional subtitle
 % \setDocSubtitle{A subtitle}
 
 \author{%
-L. Guy, G. Comoretto, W. O'Mullane, K.-T. Lim, M. Butler, M. Gelman
+L. Guy, G. Comoretto, W. O'Mullane, K.-T. Lim, M. \gls{Butler}, M. Gelman
 }	
 
 \setDocRef{LDM-672}
