--- a/definitions.tex
+++ b/definitions.tex
@@ -32,7 +32,7 @@ The following activities are done on a \gls{SW} Product:
 \item test activities, usually unit tests and system test
 \item release activities
 \item packaging activities
-\item operational activities, in stand alone mode, in an operational pipeline or as part of a service. Some \gls{SW} Products are libraries, therefore are not operationally, but used as dependencies by other software products.
+\item operational activities, in stand alone mode, in an operational \gls{pipeline} or as part of a service. Some \gls{SW} Products are libraries, therefore are not operationally, but used as dependencies by other software products.
 \end{itemize}
 
 A software product shall correspond to a single repository.
@@ -58,8 +58,6 @@ These elements shall follow a parallel development / release process.
 Test data should also not be included in a software product. However including small datasets for enabling the unit tests is not a bad practice.
 
 The content of this subsection is a \textit{prerequisite} for any release procedure to be applied.
-
-See in appendix \ref{sec:swptree} the proposed \gls{SW} product tree for \gls{DM}. So far, none of those proposed products, fits this definition.
 
 
 \subsection{Software Release} \label{sec:defrelease}
