--- a/introduction.tex
+++ b/introduction.tex
@@ -6,12 +6,11 @@ These requirements, detailed in section \ref{sec:reqs}, are not formal project r
 Section \ref{sec:process} provides an overview of the release process, as it is documented in \citeds{LDM-294}.
 
 Appedix \ref{sec:defs} provides definitions of the main objects involved in the release activities in order to provide a common understanding. 
-Appendix \ref{sec:swptree} also provides an overview of the software products part of the \gls{DM}, that are involved in this process.
 
 
 \subsection{Releases Status}\label{sec:sci}
 
-Currently, only the Science Pipelines product is released. 
+Currently, only the \gls{Science Pipelines} product is released. 
 Builds and releases are made on a the following time-based cadence:
 
 \begin{itemize}
@@ -25,6 +24,15 @@ Usually 2 or 3 weeks are sufficient but in some cases it may take more than a mo
 Consequently, by the time a release becomes available to the users, it is already old.
 For this reason, users generally prefer to work with weekly builds that are sufficiently stable and include all new functionalities completed in the last week.
 
-The Science Pipelines release checklist is documented in \citeds{SQR-016}.
+The \gls{Science Pipelines} release checklist is documented in \citeds{SQR-016}.
 The technical note \citeds{DMTN-106}, still draft, generalize the process and summarize the technical problems that need to be solve in order that this procedur can be applied to other software products.
 
+
+\subsection{Policy applicability} \label{sec:applicability}
+
+This policy shall be applicable to all \gls{DM} software products.
+
+The \gls{DM} software products are defined in the LDM-294. 
+The approved product tree is available online at\url{https://ldm-294.lsst.io/ProductTreeLand.pdf}
+
+The policy may also be applicable to other software products development by other \gls{LSST} subsystems.
