--- a/acronyms.tex
+++ b/acronyms.tex
@@ -5,16 +5,16 @@
 API & Application Programming Interface \\\hline
 BAC & Budget At Completion \\\hline
 BOE & Basis Of Estimate \\\hline
-CCB & Change Control Board \\\hline
+CCB & \gls{Change Control Board} \\\hline
 CI & Continuous Integration \\\hline
-DM & Data Management \\\hline
-DMPM & Data Management Project Manager \\\hline
+DM & \gls{Data Management} \\\hline
+DMPM & \gls{Data Management} \gls{Project Manager} \\\hline
 DMTN & \gls{DM} Technical Note \\\hline
-DRP & Data Release Production \\\hline
-LDM & \gls{LSST} Data Management (document handle) \\\hline
-LSP & \gls{LSST} Science Platform \\\hline
+DRP & \gls{Data Release Production} \\\hline
+LDM & \gls{LSST} \gls{Data Management} (document handle) \\\hline
+LSP & \gls{LSST} \gls{Science Platform} \\\hline
 LSST & Large Synoptic Survey Telescope \\\hline
-NCSA & National Center for Supercomputing Applications \\\hline
+NCSA & National \gls{Center} for Supercomputing Applications \\\hline
 OSX & Macintosh Operating System \\\hline
 PR & Pull Request \\\hline
 RFC & Request For Comment \\\hline
