Removed out of scope paragraphs

--- a/requirements.tex
+++ b/requirements.tex
@@ -22,15 +22,17 @@ In order to work effectively with the \gls{DM} software while it is still under 
 \item stable public APIs and schemas in order to build software for User-Generated analyses, 
 \item timely access new functionality,  
 \item patches and bug fixes back-ported to the current stable version of the software. 
+\item for API/ABI changes, a deprecation mechanism shall be in place in order to allow the user community to adapt their codes on an appropriate timescale.
 \end{itemize}
 
-Back-porting bug fixes to the current stable version of the software will entail extra work for \gls{DM}. 
-As not all bug fixes are needed by the science community, a process by which essential bug fixes only are back-ported to the current stable version should be adopted. 
-New functionality often necessitates new or modified APIs or schemas. 
-In such cases, a mechanism for deprecation should be adopted to allow the user community to adapt their codes on an appropriate timescale.  
-
-The \gls{DM} Science Team will liaise with the \gls{LSST} science community to understand their needs concerning \gls{DM} software product releases. 
-Requests for new functionality or back-ported bug fixes to include in forthcoming \gls{DM} software product releases will be communicated to \gls{DM} via a \gls{RFC}, coordinated either by the DM-SST liaison to the science collaboration or a nominated person within the science collaboration who will coordinate requests and raise an \gls{RFC}. 
+%%%%%% commented since  out of scope, added forth point in the above bullet list
+%Back-porting bug fixes to the current stable version of the software will entail extra work for \gls{DM}. 
+%As not all bug fixes are needed by the science community, a process by which essential bug fixes only are back-ported to the current stable version should be adopted. 
+%New functionality often necessitates new or modified APIs or schemas. 
+%In such cases, a mechanism for deprecation should be adopted to allow the user community to adapt their codes on an appropriate timescale.  
+%
+%The \gls{DM} Science Team will liaise with the \gls{LSST} science community to understand their needs concerning \gls{DM} software product releases. 
+%Requests for new functionality or back-ported bug fixes to include in forthcoming \gls{DM} software product releases will be communicated to \gls{DM} via a \gls{RFC}, coordinated either by the DM-SST liaison to the science collaboration or a nominated person within the science collaboration who will coordinate requests and raise an \gls{RFC}. 
 
 
 \subsection{Release Requirements for Data Processing in Operations} \label{sec:procreqs}
