Moveed definitions to DMTN016, updated changelog

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -39,7 +39,7 @@ Technical implementation details for release management are covered in \citeds{D
 % Fields: VERSION, DATE, DESCRIPTION, OWNER NAME.
 % See LPM-51 for version number policy.`
 \setDocChangeRecord{%
-  \addtohist{}{2019-05-09}{Added contribution from stakeholders}{G.~Comoretto on behalf of K-T Lim, M. Butler, M. Johnson}
+  \addtohist{}{2019-05-09}{Added contribution from stakeholders}{G.~Comoretto on behalf of K-T Lim, M. \gls{Butler}, M. Johnson}
   \addtohist{}{2019-05-07}{Updated community requirements, abstractt}{L.~Guy}
   \addtohist{}{2019-04-22}{Definitions and Requirements}{G.~Comoretto}
   \addtohist{}{2018-12-03}{First draft}{L.~Guy, G.~Comoretto}
@@ -65,7 +65,6 @@ Technical implementation details for release management are covered in \citeds{D
 %definitions. This could be moved in the main part pf the document
 \include{definitions}
 
-\include{swptree}
 % Include all the relevant bib files.
 % https://lsst-texmf.lsst.io/lsstdoc.html#bibliographies
 \section{References} \label{sec:bib}
