--- a/requirements.tex
+++ b/requirements.tex
@@ -10,7 +10,7 @@ The policy defined here will still be applicable, since many of the stakeholders
 
 \subsection{Rease General Requirements} \label{sec:genreq}
 
-All software releases shall be properly documented with a software release note as per definition in \ref{sec:defrelease} and tested before making them available for operations.
+All software releases shall be properly documented with a software release note as per definition in \ref{sec:defs} and tested before making them available for operations.
 
 
 \subsection{Release Requirements for the \gls{LSST} Science Community} \label{sec:comreqs}
