Removed process section and rephrased

--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -57,13 +57,15 @@ Technical implementation details for release management are covered in \citeds{D
 \newpage
 \input{requirements}
 
-\newpage
-\input{process}
+%\newpage
+% in LDM-294 now, to remove from here
+%\input{process}
 
 \appendix
 
 %definitions. This could be moved in the main part pf the document
-\include{definitions}
+% in DMTN-106 now, to remove from here
+%\include{definitions}
 
 % Include all the relevant bib files.
 % https://lsst-texmf.lsst.io/lsstdoc.html#bibliographies
