--- a/introduction.tex
+++ b/introduction.tex
@@ -3,10 +3,6 @@
 This document presents the release policy for \gls{LSST} software based on requirements from the various stakeholders.
 These requirements, detailed in section \ref{sec:reqs}, are not formal project requirements, as given for example in the \gls{DMS} requirements specification \citeds{LSE-61}, but are nevertheless important to ensure the project's goals.
 
-Section \ref{sec:process} provides an overview of the release process, as it is documented in \citeds{LDM-294}.
-
-Appedix \ref{sec:defs} provides definitions of the main objects involved in the release activities in order to provide a common understanding. 
-
 
 \subsection{Releases Status}\label{sec:sci}
 
@@ -28,7 +24,7 @@ The \gls{Science Pipelines} release checklist is documented in \citeds{SQR-016}.
 The technical note \citeds{DMTN-106}, still draft, generalize the process and summarize the technical problems that need to be solve in order that this procedur can be applied to other software products.
 
 
-\subsection{Policy applicability} \label{sec:applicability}
+\subsection{Policy Applicability} \label{sec:applicability}
 
 This policy shall be applicable to all \gls{DM} software products.
 
@@ -36,3 +32,13 @@ The \gls{DM} software products are defined in the LDM-294.
 The approved product tree is available online at\url{https://ldm-294.lsst.io/ProductTreeLand.pdf}
 
 The policy may also be applicable to other software products development by other \gls{LSST} subsystems.
+
+
+\subsection{Release Management Procedure} \label{sec:rmproc}
+
+The high-level \gls{Release} Management plan for \gls{DM} is documented in \citeds{LDM-294}, section 3.6. 
+
+
+\subsection{Definitions} \label{sec:defs}
+
+The relevant definition to be considered when working on release policy and process are given in the draft \citeds{DMTN-106}, section 2 ( \url{https://dmtn-106.lsst.io/v/review/index.html}).
