--- a/LDM-672.tex
+++ b/LDM-672.tex
@@ -4,6 +4,8 @@
 
 % Package imports go here.
 
+\input meta.tex
+
 \makeglossaries
 \input{aglossary.tex}
 
@@ -26,6 +28,8 @@ L. Guy, G. Comoretto, W. O'Mullane, K.-T. Lim, M. \gls{Butler}, M. Gelman
 
 % Optional: name of the document's curator
 \setDocCurator{Leanne Guy}
+\setDocUpstreamLocation{\url{https://github.com/lsst/ldm-672}}
+\setDocUpstreamVersion{\vcsrevision}
 
 \setDocAbstract{%
 This document outlines the \gls{LSST} \gls{DM} policy for managing software product releases. 
